--- a/front/app/package.json
+++ b/front/app/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
